# duck

./: .dockerignore  .gitignore  .gitmodules  .mybashrc  .set_ros_master.sh.swp  .ssh_ethz_watchtowers.sh.swp  2environment.sh  2set_ros_master.sh  Dockerfile  Dockerfile.rpi-gui-tools  Makefile  Makefile.tests.mk  Pi_update.sh  README.md  Untitled.ipynb  argo-master-brach-WTD-error.txt  bag_write_line_detect.sh  dependencies_common.sh  dependencies_for_laptop.sh  dependencies_since_image.sh  duckietown_install_car.sh  duckietown_install_laptop.sh  environment.sh  flash-mc.sh  frames.gv  line_detect_data_collect.py  localization.sh  log_setup.sh  profileTest  requirements.txt  scuderia.yaml  set_ros_master.sh  ssh_duckietown_test.sh  tempData  test_file  testbench.sh  text.txt  try.sh  update.sh  what-the-duck  (+12 more)
catkin_ws/src/00-infrastructure/easy_logs/: .autogenerated.md  README.md  dropbox.urls.yaml  package.xml  setup.py  unit_tests.urls.yaml
catkin_ws/src/00-infrastructure/easy_logs/src/: details  download  dropbox-links  find  gallery  ipfs-pack  require  summary  thumbnails  videos
catkin_ws/src/00-infrastructure/what_the_duck/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/00-infrastructure/what_the_duck/scripts/: what-the-duck  what-the-duck-stats
catkin_ws/src/05-teleop/calibration/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/05-teleop/calibration/src/: kinematic_calibration.py  publish_control.py
catkin_ws/src/05-teleop/patrol_bot/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/05-teleop/patrol_bot/launch/: patrol_bot_node.launch
catkin_ws/src/05-teleop/patrol_bot/src/: patrol_bot_node.py
catkin_ws/src/20-indefinite-navigation/auto_calibration/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/20-indefinite-navigation/auto_calibration/launch/: auto_calibration_calculation_node.launch  auto_calibration_node.launch
catkin_ws/src/20-indefinite-navigation/auto_calibration/src/: auto_calibration_calculation_node.py  auto_calibration_node.py
catkin_ws/src/20-indefinite-navigation/fleet_planning/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
catkin_ws/src/20-indefinite-navigation/fleet_planning/launch/: actions_dispatcher_node.launch  fake_location_publisher_node.launch  graph_search_on_pc.launch  graph_search_server_node.launch  map_draw_node.launch  mapping_demo.launch  master.launch  master_joystick.launch  master_laptop.launch  new_actions_dispatcher_node.launch  new_graph_search_server_node.launch  new_master.launch  sr_turns_node.launch  taxi_central_node.launch  virtual_duckiebot_node.launch
catkin_ws/src/20-indefinite-navigation/fleet_planning/src/: actions_dispatcher_node.py  actions_dispatcher_node0.py  fake_location_publisher_node.py  graph_search_server_node.py  map_draw_node.py  map_drawing_node.py  new_actions_dispatcher_node.py  new_graph_search_server_node.py  rqt_fleet_planning  taxi_central_node.py  test_taxi_central.py  virtual_duckiebot_node.py
catkin_ws/src/20-indefinite-navigation/fleet_planning/srv/: GraphSearch.srv  VirtualDuckiebot.srv  VirtualDuckiebotLocation.srv
catkin_ws/src/20-indefinite-navigation/fleet_planning/test/: message_serialization.test  taxi_central.test
catkin_ws/src/30-localization-and-planning/duckietown_description/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  tags_tiles_lab.csv  tags_ttic.csv  tiles_ttic.csv
catkin_ws/src/30-localization-and-planning/duckietown_description/rviz/: mcomp_project.rviz
catkin_ws/src/30-localization-and-planning/duckietown_description/urdf/: autolab.urdf.xacro  map_ttic.urdf.xacro  tags_tiles_lab.urdf.xacro  test_map_tmp.urdf.xacro
catkin_ws/src/30-localization-and-planning/fleet_messaging/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/30-localization-and-planning/fleet_messaging/config/: config.yaml  config_duckiebot_1.yaml  config_duckiebot_2.yaml  config_duckiebot_3.yaml  config_duckiebot_4.yaml  config_laptop.yaml  tester.yaml
catkin_ws/src/30-localization-and-planning/fleet_messaging/dependencies/: configure_meshnet  get_ip  get_subnet  install_batman  install_fleet_messaging  install_fleet_messaging_nomesh  install_meshnet  install_protobuf  install_zmq  unconfigure_meshnet  uninstall_meshnet
catkin_ws/src/30-localization-and-planning/visual_odom/: CMakeLists.txt  README.md  package.xml  setup.py  test.py  visual_odometry.py
catkin_ws/src/40-coordination/implicit_coordination/: CMakeLists.txt  package.xml
catkin_ws/src/40-coordination/rgb_led/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/50-misc-additional-functionality/multivehicle_tracker/: CMakeLists.txt  README.md  default.yaml  package.xml  setup.py
catkin_ws/src/50-misc-additional-functionality/parking/: CMakeLists.txt  README.md  demo_instructions.md  package.xml
catkin_ws/src/60-templates/rostest_example/: .autogenerated.md  README.md  package.xml  setup.py
catkin_ws/src/70-convenience-packages/duckietown_unit_test/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
catkin_ws/src/70-convenience-packages/multivehicle_tracking_visualizer/: CMakeLists.txt  README.md  default.yaml  package.xml  setup.py
catkin_ws/src/80-to-sort/duckie_rr_bridge/: .autogenerated.md  README.md  package.xml
catkin_ws/src/80-to-sort/parallel_autonomy/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
catkin_ws/src/80-to-sort/scene_segmentation/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
catkin_ws/src/90-failed/mouse_encoder/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/90-failed/simcity/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/90-failed/slam/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/parking/: CMakeLists.txt  package.xml
catkin_ws/src/parking/include/: image_undistorter.h
catkin_ws/src/parking/src/: image_undistorter.cpp
catkin_ws/src/slam/: CMakeLists.txt  package.xml
catkin_ws/src/slam/launch/: slam.launch
catkin_ws/src/slam/src/: slam_node.cpp  slam_node_backup.cpp
(+3448 files in other folders)
