<?xml version="1.0"?>
<package>
  <name>easy_logs</name>
  <version>1.0.0</version>
  <description>The `easy_logs` package</description>


  <maintainer email="acensi@idsc.mavt.ethz.ch">Andrea Censi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
 
  <run_depend>rospy</run_depend>

</package>
