<?xml version="1.0"?>
<package>
  <name>what_the_duck</name>
  <version>1.0.0</version>
  <description>What the duck?</description>
  <maintainer email="acensi@idsc.mavt.ethz.edu">Andrea Censi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
