<?xml version="1.0"?>
<package>
  <name>what_the_duck</name>
  <version>1.0.0</version>
  <description>

`what-the-duck` is a program that tests *dozens* of configuration
inconsistencies that can happen on a Duckiebot.

### The `what-the-duck` program {#what-the-duck}

To use it, first compile the repository, and then run:

    $ ./what-the-duck

</description>
  <author email="acensi@idsc.mavt.ethz.ch">Andrea Censi</author>
  <maintainer email="acensi@idsc.mavt.ethz.ch">Andrea Censi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
