<?xml version="1.0"?>
<package>
  <name>calibration</name>
  <version>1.0.0</version>
  <description>
The package `pkg_name` is a template for ROS packages.

For the tutorial, see [](#ros-python-howto).
</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <author email="sgadi@student.ethz.ch">Sofiane Gadi</author>
<maintainer email="sgadi@student.ethz.ch">Sofiane Gadi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>dagu_car</build_depend>


  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>dagu_car</run_depend>

</package>
