<?xml version="1.0"?>
<package>
  <name>patrol_bot</name>
  <version>1.0.0</version>
  <description>The patrol_bot package for duckietown. Takes duckietown_msgs.BoolStamped and turn on and off the ligths accordingly.</description>

  <maintainer email="afdaniele@ttic.edu">Andrea</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
