<?xml version="1.0"?>
<package>
  <name>auto_calibration</name>
  <version>1.0.0</version>
  <description>The auto_calibration package implements an automatic odometry and camera calibration procedure to be used in a megacity.</description>

  <maintainer email="webeben@ethz.ch">Ben Weber</maintainer>
  <author email="webeben@ethz.ch">Ben Weber</author>


  <license>GPLv3</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
