<?xml version="1.0"?>
<package>
  <name>fleet_messaging</name>
  <version>1.0.0</version>
  <description>
The package `fleet_messaging` is needed in duckietown, such that duckiebots
can communicate with each other through multicast (ZeroMQ epgm).
</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <author email="trleonie@ethz.ch">Leonie Traffelet</author>
  <maintainer email="trleonie@ethz.ch">Leonie Traffelet</maintainer>
  <maintainer email="somml@ethz.ch">Luca Somm</maintainer>
  <maintainer email="patk@ethz.ch">Napat Karnchanachari</maintainer>
  <maintainer email="antoine.patru@helbling.ch">Antoine Patru</maintainer>
  <maintainer email="francesco.ferrara@helbling.ch">Francesco Ferrara</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
