<?xml version="1.0"?>
<package>
  <name>visual_odometry</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `visual_odometry` in `package.xml`.</description>

  <author email="giberas@ethz.ch">Gianmarco Bernasconi</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>unittest</test_depend>


</package>
