<?xml version="1.0"?>
<package>
  <name>implicit_coordination</name>
  <version>1.0.0</version>
  <description>
The package 'implicit_coord' coordinates the Duckiebots at intersetions
in a implicit manner
</description>


  <author email="kornele@student.ethz.ch">Kornel Eggerschwiler</author>
  <maintainer email="kornele@student.ethz.ch">Kornel Eggerschwiler</maintainer>

  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
