<?xml version="1.0"?>
<package>
  <name>rostest_example</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `rostest_example` in `package.xml`.</description>

  <author email="teddy@mit.edu">Teddy Ort</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>unittest</test_depend>


</package>
