<?xml version="1.0"?>
<package>
  <name>duckietown_unit_test</name>
  <version>1.0.0</version>
  <description>The duckietown_unit_test meta package contains all the unit test launch file for duckietown.</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend> 
 
  <export> 
  </export>
</package>