<?xml version="1.0"?>
<package>
    <name>multivehicle_tracking_visualizer</name>
    <version>0.0.1</version>
    <description>
        TODO: Write description of the package.
    </description>

    <author email="takeitallsource@gmail.com">Manfred Diaz</author>
    <author email="jonathan.arsenault@gmail.com">Jonathan Arsenault</author>

    <maintainer email="takeitallsource@gmail.com">Manfred Diaz</maintainer>

    <license>MIT</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
