<?xml version="1.0"?>
<package>
  <name>duckie_rr_bridge</name>
  <version>1.0.0</version>
  <description>The duckie_rr_bridge package. Creates a Robot Raconteur Service to drive the Duckiebot.</description>

  <author email="gsgrebe@gmail.com">greg</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  
  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>RobotRaconteur</build_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>RobotRaconteur</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
