<?xml version="1.0"?>
<package>
  <name>parallel_autonomy</name>
  <version>1.0.0</version>
  <description>TODO: description for the parallel autonomy package</description>

  <maintainer email="lpaull@mit.edu">Liam Paull</maintainer>


  <license>GPLv3</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

 
</package>
