<?xml version="1.0"?>
<package>
  <name>mouse_encoder</name>
  <version>0.0.1</version>
  <description>
    The mouse_encoder package for duckietown.
    Read mouse tick in x and y direction and publish a geometry_msgs/Point.
  </description>
  <maintainer email="mack@duckietown.org">Mack</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>



</package>
